fixed cms spacing order

--- a/wp-content/themes/arena/includes/blocks/hero/block.scss
+++ b/wp-content/themes/arena/includes/blocks/hero/block.scss
@@ -19,6 +19,7 @@
         transform: translateX(-50%);
         z-index: 99;
         cursor: pointer;
+        overflow: hidden;
     }
     @media only screen and (max-width: 768px){
         h1{
