--- a/wp-content/themes/arena/scss/components/_components.scss
+++ b/wp-content/themes/arena/scss/components/_components.scss
@@ -19,9 +19,29 @@
         background-size: contain;
         width: 19px;
         height: 10px;
+        z-index: 20;
+    }
+    &::before{
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 100%;
+        background-color: #06A4DE;
+        width: 100%;
+        height: 100%;
+        border-radius: 100%;
+        transform: translateY(100%) scale(0.1);
+        opacity: 0.1;
+        transition: all .44s ease;
+        z-index: 1;
     }
     &:hover{
-        background-color: #06A4DE;
+        &::before{
+            transform: translateY(0) scale(1);
+            opacity: 1;
+        }
     }
     @media only screen and (max-width: 768px){
         width: 34px;
