--- a/wp-content/themes/arena/scss/global/_document.scss
+++ b/wp-content/themes/arena/scss/global/_document.scss
@@ -28,6 +28,7 @@ html {
   display: inline-block;
   padding-bottom: 2px;
   font-size: 20px;
+  color: #1F282E;
   &::after, &::before{
     content: '';
     display: block;
